iniciando exercicios Aula-01

--- a/Exercicios_Aula-02/exerc_01/index.html
+++ b/Exercicios_Aula-02/exerc_01/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aulas Julião</title>
 </head>
 <body>
-    
+    <h1> Julião da Massa</h1>
 </body>
-<script src="index.js">
-    
-</script>
+
+<script src="index.js"></script>
 </html>
