Ajuste de titulo

--- a/Tabuada/index.html
+++ b/Tabuada/index.html
@@ -15,7 +15,7 @@
             <input type="number" class="form" id="num">
         </p>
         <p>
-            Ate qual número você a tabuada:
+            Ate qual número você quer a tabuada:
         </p></br>
             <input type="number" class="form" id="multiplicador">
         
